<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="3dp"
    xmlns:android.support.design="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_salavat_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nummber_salavat"
        android.support.design:hintAnimationEnabled="true"
        android.support.design:hintEnabled="true">

        <EditText
            android:id="@+id/input_salavat_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:imeOptions="actionNext" />

    </android.support.design.widget.TextInputLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="15dp">
        <Button
            android:id="@+id/btnConfirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:layout_weight="0.5"
            style="@style/button"
            android:layout_margin="2dp"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_weight="0.5"
            style="@style/button"
            android:layout_margin="2dp"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>
